2012-06-19  Julien Danjou  <julien@danjou.info>

	* nnir.el (nnir-run-imap): Fix, use `nnimap-change-group'.

	* nnimap.el (nnimap-log-buffer): Check that
	`window-point-insertion-type' is boundp, since it's not available in
	XEmacs.

2012-06-19  Michael Welsh Duggan  <md5i@md5i.com>  (tiny change)

	* nnimap.el (nnimap-log-buffer): Add this, setting
	`window-point-insertion-type' in the buffer to t.
	(nnimap-log-command): Use nnimap-log-buffer.

2012-06-19  Julien Danjou  <julien@danjou.info>

	* nnimap.el (nnimap-find-article-by-message-id): Add an optional limit
	argument to be able to limit the search.
	(nnimap-request-move-article): Use `nnimap-request-move-articles-find-limit'.
	(nnimap-request-move-articles-find-limit): Add this to limit the search
	by Message-Id after a message move.
	(nnimap): Add defgroup.

2012-06-18  Nelson Ferreira  <nelson.ferreira@ieee.org>  (tiny change)

	* gnus-win.el (gnus-configure-frame): Pass an arg to window-dedicated-p.

2012-06-15  Julien Danjou  <julien@danjou.info>

	* nnimap.el (nnimap-find-article-by-message-id): Use
	`nnimap-possibly-change-group' rather than its own EXAMINE call.
	(nnimap-possibly-change-group): Add read-only argument.
	(nnimap-request-list): Use nnimap-possibly-change-group rather than
	issuing EXAMINE manually.
	(nnimap-find-article-by-message-id): Use `nnimap-possibly-change-group'
	with read-only argument.
	(nnimap-change-group): Rename from `nnimap-possibly-change-group'. We
	cannot possibly change because we need to be sure that it's either
	read-write or read-only.

2012-06-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-read-summary-keys): Protect against the key
	being bound to a lambda form.

2012-04-14  Wolfgang Jenkner  <wjenkner@inode.at>

	* gnus-agent.el (gnus-agent-retrieve-headers): Recalculate the range of
	articles when fetch-old is non-nil (bug#11370).

2012-05-04  Wolfgang Jenkner  <wjenkner@inode.at>
