@@ -1,3 +1,15 @@
+2012-06-22  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Support higher-resolution time stamps (Bug#9000).
+
+	* time-date.el (with-decoded-time-value): New arg PICO-SYMBOL in
+	VARLIST.  It's optional, for backward compatibility.
+	(encode-time-value): New optional arg PICO.  New type 3.
+	(time-to-seconds) [!float-time]: Support the new picoseconds
+	component if it's used.
+	(seconds-to-time, time-subtract, time-add):
+	Support ps-resolution time stamps as well.
+
 2012-06-19  Julien Danjou  <julien@danjou.info>
 
 	* nnir.el (nnir-run-imap): Fix, use `nnimap-change-group'.
